Commit de fichier

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,7 @@
 /vendor/
 
 # Assets and user uploads
-/web/bundles/
-/web/uploads/
+/web/
 
 # PHPUnit
 /app/phpunit.xml
@@ -35,3 +34,6 @@
 
 # Composer PHAR
 /composer.phar
+
+# Npm
+/npm-debug.log
