--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,6 +31,11 @@ framework:
     fragments:       ~
     http_method_override: true
 
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: UserBundle\Entity\User
+
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
