--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,8 +7,7 @@ parameters:
     database_name:     symfony
     database_user:     root
     database_password: ~
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
+    locale: fr
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
@@ -16,4 +15,4 @@ parameters:
     mailer_password:   ~
 
     # A secret key that's used to generate certain security-related tokens
-    secret:            ThisTokenIsNotSoSecretChangeIt
+    secret:            AMDKD7395LFCSHS68KEKIEO9395OMMD00
