--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -41,3 +41,8 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+    
+easy_admin_bundle:
+    resource: "@CoreBundle/Controller/AdminController.php"
+    type:     annotation
+    prefix:   /
