--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,28 +1,3 @@
-core:
-    resource: "@CoreBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-user:
-    resource: "@UserBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-match:
-    resource: "@MatchBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-team:
-    resource: "@TeamBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-school:
-    resource: "@SchoolBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
@@ -46,3 +21,8 @@ easy_admin_bundle:
     resource: "@CoreBundle/Controller/AdminController.php"
     type:     annotation
     prefix:   /
+
+rest : 
+  type : rest 
+  resource : "@CoreBundle/Resources/config/routing_api.yml"
+  prefix : /api
