--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "^1.3",
-        "javiereguiluz/easyadmin-bundle": "^1.10"
+        "javiereguiluz/easyadmin-bundle": "^1.10",
+        "jms/serializer-bundle": "^1.1",
+        "friendsofsymfony/rest-bundle": "^1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
