--- a/web/.htaccess
+++ b/web/.htaccess
@@ -17,6 +17,12 @@ DirectoryIndex app.php
     Options -MultiViews
 </IfModule>
 
+<IfModule mod_headers.c>
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Methods "POST, GET, PUT, OPTIONS, PATCH, DELETE" 
+    Header always set Access-Control-Allow-Headers "X-Accept-Charset,X-Accept,Content-Type,X-Powered-By,X-Authentication-Token"
+</IfModule>
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
