Mise en place doc api

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,6 +23,10 @@ easy_admin_bundle:
     prefix:   /
 
 rest : 
-  type : rest 
-  resource : "@CoreBundle/Resources/config/routing_api.yml"
-  prefix : /api
+    type : rest 
+    resource : "@CoreBundle/Resources/config/routing_api.yml"
+    prefix : /api
+
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
