--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "friendsofsymfony/user-bundle": "^1.3",
         "javiereguiluz/easyadmin-bundle": "^1.10",
         "jms/serializer-bundle": "^1.1",
-        "friendsofsymfony/rest-bundle": "^1.7"
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "nelmio/api-doc-bundle": "^2.12"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
