Exclude pass fos_user + WS Score team

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -119,5 +119,5 @@ jms_serializer:
     metadata:
         directories:
             FOSUB:
-                namespace_prefix: "FOS/UserBundle"
-                path: "%kernel.root_dir%/serializer/FOSUB"
+                namespace_prefix: "FOS\\UserBundle"
+                path: "@UserBundle/Resources/serializer/fos"
