Fix erreur post score + fix bug create user

--- a/src/CoreBundle/Resources/config/config.yml
+++ b/src/CoreBundle/Resources/config/config.yml
@@ -54,7 +54,7 @@ easy_admin:
             class: MatchBundle\Entity\Versus
             list:
                 title: "Liste des matchs"
-                fields: ['id', 'date_match', 'nb_table', 'team1', 'team2', 'finished']
+                fields: ['id', 'nb_table', 'team1', 'team2', 'finished']
             form:
                 title:  "Ajout d'une école"
                 fields: ['date_match', 'nb_table', 'team1', 'team2']
