--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "nelmio/api-doc-bundle": "^2.12"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "post-install-cmd": [
