--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -16,11 +16,6 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
-    
-easy_admin_bundle:
-    resource: "@CoreBundle/Controller/AdminController.php"
-    type:     annotation
-    prefix:   /
 
 rest : 
     type : rest 
@@ -30,3 +25,12 @@ rest :
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
+
+admin_area:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /
