--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,21 +8,24 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
-    
+
     providers:
         fos_userbundle:
             id: fos_user.user_provider.username
 
     firewalls:
         main:
-            pattern: ^/
+            pattern:             .*
+            context:            user
             form_login:
-                provider: fos_userbundle
-                # csrf_token_generator: security.csrf.token_manager
-                # if you are using Symfony < 2.8, use the following config instead:
-                csrf_provider: security.csrf.token_manager
-            logout:       true
-            anonymous:    true
+                provider:       fos_userbundle
+                login_path:     /login
+                use_forward:    false
+                check_path:     /login_check
+                default_target_path: /admin
+                failure_path:   null
+            logout:             true
+            anonymous:          true
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -42,4 +45,5 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/dashboard, role: ROLE_ADMIN }
         - { path: ^/, role: ROLE_ADMIN }
