Mise en place de SonataAdmin

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,8 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    admin.category:
+        class: CoreBundle\Admin\SchoolAdmin
+        arguments: [~, SchoolBundle\Entity\School, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Category }
