--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ php:
   - "7.0"
 before_script:
   - composer install
+  - php app/console doctrine:database:create
+  - php app/console doctrine:schema:update --force
 script: php phpunit.phar --bootstrap app\autoload.php --configuration app\phpunit.xml.dist
