--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer install
+  - composer install --dev
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
