--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: php
 php:
   - "7.0"
 
+services:
+  - mysql
+
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - php app/console doctrine:database:create --env=test
   - composer install --prefer-source --no-interaction --dev
+  - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
 
