--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ services:
 
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer install --prefer-source --no-interaction --dev
+  - composer install -n --no-interaction
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
 
-script: php phpunit.phar --bootstrap app\autoload.php --configuration app\phpunit.xml.dist
+script: php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist
