--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,9 @@ before_script:
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
 
-script: php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist
+script:
+  - mkdir -p build/logs
+  - php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist --coverage-clover build/logs/clover.xml
+
+after_script:
+ - php vendor/bin/coveralls -v
