--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -15,6 +15,10 @@
         </testsuite>
     </testsuites>
 
+    <logging>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
+    
     <!--
     <php>
         <server name="KERNEL_DIR" value="/path/to/your/app/" />
