--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 php:
   - "7.0"
-  - hhvm
 
 services:
   - mysql
@@ -9,14 +8,14 @@ services:
 before_script:
   - mkdir -p build/logs
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer install -n --no-interaction
+  - curl -s getcomposer.org/installer | php -d detect_unicode=Off
+  - php composer.phar install --dev --prefer-source --no-interaction
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
 
 script:
-#  - php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist --coverage-clover build/logs/clover.xml
-  - phpunit --coverage-clover build/logs/clover.xml
+  - php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist --coverage-clover build/logs/clover.xml
 
 after_success:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+  - php scripts/coveralls -v --exclude-no-stmt
