--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ services:
 before_script:
   - mkdir -p build/logs
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer require codeclimate/php-test-reporter --dev
   - composer install -n --no-interaction
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
@@ -22,3 +21,7 @@ script:
 after_script:
 - CODECLIMATE_REPO_TOKEN="073ba2e23fe017b08a98bec817830935ad88748a828fa6f70f9039ae231416f2" vendor/bin/test-reporter --stdout > codeclimate.json
 - "sh -c 'if [ \"$TRAVIS_PHP_VERSION\" != \"hhvm\" ]; then curl -X POST -d @codeclimate.json -H \"Content-Type: application/json\" -H \"User-Agent: Code Climate (PHP Test Reporter v0.1.1)\" https://codeclimate.com/test_reports  ; fi'"
+
+addons:
+    code_climate:
+        repo_token: 073ba2e23fe017b08a98bec817830935ad88748a828fa6f70f9039ae231416f2
