--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 php:
   - 5.6
   - 7.0
-  - hhvm
 
 services:
   - mysql
@@ -15,6 +14,8 @@ before_script:
   - php app/console doctrine:fixtures:load -n --env=test
 
 script:
-  - php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist --testsuite=unit --coverage-text --coverage-clover build/logs/clover.xml
+  - php phpunit.phar --bootstrap app/autoload.php --configuration app/phpunit.xml.dist --coverage-clover build/logs/clover.xml
 
-after_script: ./codeclimate.sh
+after_script:
+  - bin/test-reporter --stdout > codeclimate.json
+  - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
