--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,6 +9,8 @@ services:
         arguments: [~, SchoolBundle\Entity\School, ~]
         tags:
             - { name: sonata.admin, manager_type: orm, label: School }
+        calls:
+            - [addChild, ['@admin.student', '@admin.group']]
     admin.student:
         class: CoreBundle\Admin\StudentAdmin
         arguments: [~, SchoolBundle\Entity\Student, ~]
@@ -24,3 +26,12 @@ services:
         arguments: [~, TeamBundle\Entity\Team, ~]
         tags:
             - { name: sonata.admin, manager_type: orm, label: Team }
+        calls:
+            - [addChild, ['@admin.student']]
+    admin.group:
+        class: CoreBundle\Admin\GroupAdmin
+        arguments: [~, MatchBundle\Entity\GroupMatch, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Group }
+        calls:
+            - [addChild, ['@admin.team']]
