BO: Administration des matchs

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,6 +115,8 @@ sonata_admin:
                     - admin.student
                     - admin.team
                     - admin.group
+                    - admin.versus
+                    - admin.score
 
 fos_rest:
     param_fetcher_listener: true
