--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -34,3 +34,6 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /
+
+core:
+    resource: "@CoreBundle/Resources/config/routing.yml"
