BDD & BO: Mise en place du tournoi

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,6 +108,7 @@ sonata_admin:
                     - admin.school
                     - admin.config
                     - admin.user
+                    - admin.tournament
             app.teacher:
                 label: dashboard.teacher
                 label_catalogue: Admin
