--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,7 +5,7 @@ parameters:
     database_host:     127.0.0.1
     database_port:     ~
     database_name:     ~
-    database_user:     root
+    database_user:     contestmanager
     database_password: ~
     locale: fr
 
@@ -25,4 +25,3 @@ parameters:
         - 14:00
         - 14:20
         - 14:40
-    room_number: 2
