--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,6 +100,8 @@ sonata_block:
 sonata_admin:
     templates:
         layout: "CoreBundle:Admin:standard_layout.html.twig"
+    title: Contest Manager
+    title_logo: bundles/core/images/robot.png
     dashboard:
         groups:
             app.admin:
