--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,26 @@
+---
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+      - python
+      - php
+  fixme:
+    enabled: true
+  phpmd:
+    enabled: true
 ratings:
   paths:
-  - "src/*"
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
+  - "**.rb"
 exclude_paths:
-- "app/"
-- "web/"
+  - "app/*"
+  - "web/*"
