Fix erreur bdd & page de téléchargement publique

--- a/src/CoreBundle/Resources/config/routing.yml
+++ b/src/CoreBundle/Resources/config/routing.yml
@@ -8,9 +8,9 @@ app_upload:
     defaults: { _controller: CoreBundle:Default:mobileAppUpload }
 
 app_download_view:
-    path:     /app_dowload
+    path:     /app/download
     defaults: { _controller: CoreBundle:Default:mobileAppDownload }
 
 app_download_action:
-    path:     /app_dowload_action
+    path:     /app/dowload_action
     defaults: { _controller: CoreBundle:Default:appDownload }
