--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,8 +43,7 @@ security:
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/app, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/select, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/dashboard, role: ROLE_ADMIN }
-        - { path: ^/, role: ROLE_ADMIN }
+        - { path: ^/*, role: ROLE_ADMIN }
