Page des score :) :)

--- a/src/CoreBundle/Resources/config/routing.yml
+++ b/src/CoreBundle/Resources/config/routing.yml
@@ -3,6 +3,10 @@ tournament:
     path:     /tournament
     defaults: { _controller: CoreBundle:Default:tournament }
 
+scoreTournament:
+    path:     /scores_tournament
+    defaults: { _controller: CoreBundle:Default:scoreTournaments }
+
 app_upload:
     path:     /app_upload
     defaults: { _controller: CoreBundle:Default:mobileAppUpload }
