--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,8 +4,8 @@
 parameters:
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     ~
-    database_user:     contestmanager
+    database_name:     contestmanager
+    database_user:     root
     database_password: ~
     locale: fr
 
