Add custom import action & Setup ExcelBundle

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "friendsofsymfony/rest-bundle": "^1.7",
         "nelmio/api-doc-bundle": "^2.12",
         "sonata-project/admin-bundle": "^3.8",
-        "sonata-project/doctrine-orm-admin-bundle": "^3.1"
+        "sonata-project/doctrine-orm-admin-bundle": "^3.1",
+        "liuggio/excelbundle": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
